--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ pydantic==1.10.4
 python-dotenv==0.21.1
 PyYAML==6.0
 sniffio==1.3.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a32
+sqlmodel==0.0.8
 starlette==0.25.0
 typing_extensions==4.5.0
 uvicorn==0.20.0
