--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,35 @@
 anyio==3.6.2
+bcrypt==4.0.1
+beanie==1.17.0
 click==8.1.3
 dnspython==2.3.0
+ecdsa==0.18.0
 email-validator==1.3.1
 fastapi==0.92.0
+greenlet==2.0.2
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+lazy-model==0.0.5
+motor==3.1.1
+passlib==1.7.4
+pyasn1==0.4.8
 pydantic==1.10.4
+pymongo==4.3.3
 python-dotenv==0.21.1
+python-jose==3.3.0
+python-multipart==0.0.5
 PyYAML==6.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 sqlalchemy2-stubs==0.0.2a32
 sqlmodel==0.0.8
 starlette==0.25.0
+toml==0.10.2
 typing_extensions==4.5.0
 uvicorn==0.20.0
 uvloop==0.17.0
 watchfiles==0.18.1
 websockets==10.4
-
-beanie~=1.17.0
-motor~=3.1.1
